# MT-Bench-X

./: .gitignore  .pre-commit-config.yaml  README.md  add_message_recursive.py  pyproject.toml
data/mt_bench_DE/: corrections.jsonl  judge_prompts.jsonl  judge_prompts_v2.jsonl  question.jsonl  question_original.jsonl
data/mt_bench_DE/model_judgment/: gpt-4_single.jsonl
data/mt_bench_DE/reference_answer/: gpt-4.jsonl
data/mt_bench_EN/: question.jsonl
data/mt_bench_EN/model_judgment/: gpt-4_single.jsonl
data/mt_bench_EN/reference_answer/: gpt-4.jsonl
data/mt_bench_ES/: corrections.jsonl  judge_prompts.jsonl  question.jsonl  question_original.jsonl
data/mt_bench_ES/reference_answer/: gpt-4.jsonl
data/mt_bench_FR/: corrections.jsonl  judge_prompts.jsonl  question.jsonl  question_original.jsonl
data/mt_bench_FR/reference_answer/: gpt-4.jsonl
data/mt_bench_IT/: corrections.jsonl  judge_prompts.jsonl  question.jsonl  question_original.jsonl
data/mt_bench_IT/reference_answer/: gpt-4.jsonl
src/mtbenchx/: __main__.py  collect_model_specific_judgments.py  evalset.py  generate_answers_and_judgments.py  vizualize_radar.py
src/mtbenchx/fastchat/: __init__.py  constants.py  conversation.py  utils.py
src/mtbenchx/fastchat/llm_judge/: common.py  gen_judgment.py  gen_model_answer.py  utils.py
src/mtbenchx/fastchat/model/: compression.py  llama_condense_monkey_patch.py  model_adapter.py  model_chatglm.py  model_cllm.py  model_codet5p.py  model_exllama.py  model_falcon.py  model_registry.py  model_xfastertransformer.py  model_yuan2.py  monkey_patch_non_inplace.py  (+1 more)
(+5 files in other folders)
