[project]
name = "mtbenchx"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
description = "A framework to evaluate the multilingual instruction following capabilities of large language models."
dependencies = [
    "aiohttp", "fastapi", "httpx", "markdown2[all]", "nh3", "numpy",
    "prompt_toolkit>=3.0.0", "pydantic<3,>=2.0.0", "pydantic-settings", "psutil", "requests", "rich>=10.0.0",
    "shortuuid", "tiktoken", "uvicorn",
    "accelerate>=0.21", "peft", "sentencepiece", "torch", "transformers>=4.31.0", "protobuf",
    "openai==1.19.0", "anthropic>=0.3", "ray", "plotly", "kaleido", "seaborn", "plotly", "kaleido"
]

[project.optional-dependencies]
webui = ["gradio>=4.10"]
train = ["einops", "flash-attn>=2.0", "wandb", "tensorboard"]
dev = [
    "virtualenv",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "isort",
]

[project.scripts]
mtbenchx = "mtbenchx.__main__:main"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "ruff"
line_length = 180
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 180
